sort.basic.insertion.AlgInsertionSort.scala.error
Erreur de compilation :
AlgInsertionSort:3: error: not found: value getValueCOunt
  var n=getValueCOunt()
        ^