sort.basic.insertion.AlgInsertionSort.scala.code
def insertionSort() {
  var n=getValueCOunt()
  var v=0
  for (i<- 1 to n){
    v=getValue(i)
    for (k<-1 to i){
      if (getValue(i-k)>v){
        copy(i-k,i)
      }
    }
  }
}